k8/ai-gateway.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: noveum-gateway-ingress
  namespace: noveum
  annotations:
    cert-manager.io/issuer: prod-issuer
    cert-manager.io/issuer-kind: OriginIssuer
    cert-manager.io/issuer-group: cert-manager.k8s.cloudflare.com
    external-dns.alpha.kubernetes.io/hostname: gateway.noveum.ai
    external-dns.alpha.kubernetes.io/cloudflare-proxied: 'true'
    nginx.ingress.kubernetes.io/use-proxy-protocol: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: gateway.noveum.ai
      http:
        paths:
          - backend:
              service:
                name: noveum-ai-gateway-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - gateway.noveum.ai
      secretName: noveum-tls-gateway
---
apiVersion: v1
kind: Service
metadata:
  name: noveum-ai-gateway-svc
  namespace: noveum
spec:
  selector:
    app: noveum-ai-gateway
  type: ClusterIP
  ports:
    - port: 80
      name: http
      targetPort: 3000
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: noveum-ai-gateway
  namespace: noveum
  labels:
    app: noveum-ai-gateway
spec:
  replicas: 3
  selector:
    matchLabels:
      app: noveum-ai-gateway
  strategy:
    rollingUpdate:
      maxSurge: 10%
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: noveum-ai-gateway
    spec:
      containers:
        - name: noveum-ai-gateway
          image: noveum/noveum-ai-gateway:latest
          ports:
            - containerPort: 3000
              name: http
          imagePullPolicy: Always
          resources:
            requests:
              memory: '512Mi'
              cpu: '512m'
            limits:
              memory: '1024Mi'
              cpu: '1024m'
          livenessProbe:
            httpGet:
              path: /health
              port: 3000
            initialDelaySeconds: 3
            periodSeconds: 30
